# snortgen

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sid_state.txt  snortgen.config.example.toml
.devcontainer/: Dockerfile  devcontainer.json
rules/: local.rules
snort_rulegen/: batch.py  config.py  rule_templates.py  sid_manager.py  snortgen.py  utils.py
snortsmith_rulegen/: __init__.py  _config.py  _loaders.py  _rule_templates.py  _sid_manager.py  _utils.py  batch.py  config.py  main.py  rule_templates.py  sid_manager.py  snortsmith.py  utils.py
tests/: test_batch.py  test_loaders.py  test_main_routing.py  test_rule_templates.py  test_sid_manager.py  test_utils.py
