[project]
name = "snortsmith"
version = "1.0.0"
description = "A CLI-assisted Snort rule generator"
readme = "README.md"
authors = [{ name = "Tyler Smith", email = "tyler.savon.smith@gmail.com" }]
license = "MIT"
dependencies = [
    "toml"
]

[project.scripts]
snortsmith = "snortsmith_rulegen.main:main"

[tool.setuptools]
packages = ["snortsmith_rulegen"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = "test_*.py"
testpaths = ["tests"]